--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxtjs/supabase": "^1.5.1",
     "@supabase/supabase-js": "^2.49.9",
     "nuxt": "^3.17.4",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
-    "vuetify": "^3.8.7"
+    "vuetify": "^3.8.7",
+    "vuetify-nuxt-module": "^0.18.6"
   }
 }
