--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.7",
-    "vuetify-nuxt-module": "^0.18.6"
+    "vuetify-nuxt-module": "^0.18.6",
+    "wheel-menu": "^1.0.0"
   }
 }
